--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,15 +15,18 @@
     <!-- Favicons -->
     <link rel="icon" href="./assets/images/favicon.png" type="image/x-icon" />
 
-	<!-- Scripts -->
+    <!-- Scripts -->
     <script src="https://kit.fontawesome.com/c89aa4f49d.js" crossorigin="anonymous"></script>
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-YDCFQGQZB8"></script>
-	<script>
-	    window.dataLayer = window.dataLayer || [];
-	    function gtag(){dataLayer.push(arguments);}
-	    gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YDCFQGQZB8"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
-	    gtag('config', 'G-YDCFQGQZB8');
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-YDCFQGQZB8');
     </script>
 </head>
 
@@ -57,14 +61,18 @@
                         <img src="./assets/images/profile-picture.jpg">
                     </div>
                     <p text-align="left">
-                        I'm 16 years old studying in high school for my GCE AL's at <a title="Respice Finem" href="https://www.trinitycollege.lk" target="_blank">Trinity College Kandy</a>.
-                        I got into programming with the pandemic lockdown, after meeting another developer who suggested me to learn some coding.
+                        I'm 16 years old studying in high school for my GCE AL's at <a title="Respice Finem"
+                            href="https://www.trinitycollege.lk" target="_blank">Trinity College Kandy</a>.
+                        I got into programming with the pandemic lockdown, after meeting another developer who suggested
+                        me to learn some coding.
                         Since then I've been coding a lot, mostly in Python and JavaScript.
                         <br><br>
-                        I've learned a lot just by self-studying, reading articles, docs, & talking to everyone that I've met.
+                        I've learned a lot just by self-studying, reading articles, docs, & talking to everyone that
+                        I've met.
                         Special thanks to
                         <a _target="_blank" href="https://www.linkedin.com/in/leonid-skorospelov">Leonid</a>,
-                        <a _target="_blank" href="https://www.linkedin.com/in/kelum-dhananjaya-460a4298/">Kellum</a> for their time and advice.
+                        <a _target="_blank" href="https://www.linkedin.com/in/kelum-dhananjaya-460a4298/">Kellum</a> for
+                        their time and advice.
                     </p>
                 </div>
 
@@ -72,11 +80,17 @@
                     <h2>Get in touch</h2>
 
                     <div class="lgt-socials-bar">
-                        <a title="Email" href="mailto:mwmykd@gmail.com"><i class="fas fa-at"></i><label>mwmykd@gmail.com</label></a>
-                        <a title="Telephone" href="tel:+94 71 994 5826"><i class="fas fa-mobile-alt"></i><label>+94 71 994 5826</label></a>
-                        <a title="Discord" href="discord:https://discord.com/users/837258955415748639"><i class="fab fa-discord"></i><label>Yas_!_ru#9999</label></a>
-                        <a title="Github" target="_blank" href="https://github.com/ItsYasiru"><i class="fab fa-github-alt"></i><label>ItsYasiru</label></a>
-                        <a title="Instagram" target="_blank" href="https://www.instagram.com/its.yasiru/"><i class="fab fa-instagram"></i><label>its.yasiru</label></a>
+                        <a title="Email" href="mailto:mwmykd@gmail.com"><i
+                                class="fas fa-at"></i><label>mwmykd@gmail.com</label></a>
+                        <a title="Telephone" href="tel:+94 71 994 5826"><i class="fas fa-mobile-alt"></i><label>+94 71
+                                994 5826</label></a>
+                        <a title="Github" target="_blank" href="https://github.com/ItsYasiru"
+                            style="background: linear-gradient(to right, #161c1c, #101414)"><i class="fab fa-github-alt"></i><label>ItsYasiru</label></a>
+                        <a title="Discord" href="discord:https://discord.com/users/837258955415748639"
+                            style="background: linear-gradient(to right, #7d88ff, #5865F2)"><i class="fab fa-discord"></i><label>Yas_!_ru#9999</label></a>
+                        <a title="Instagram" target="_blank" href="https://www.instagram.com/its.yasiru/"
+                            style="background: linear-gradient(to right, #fa8c51, #d6249f)"><i
+                                class="fab fa-instagram"></i><label>its.yasiru</label></a>
                     </div>
                 </div>
             </div>
@@ -114,16 +128,6 @@
                             </td>
                         </tr>
                         <tr>
-                            <td>Server Management<label st="skill"></label></td>
-                            <td>Intermediate</td>
-                            <td>I have experience with handling Linux servers & Process management. I'm familiar with SSH & FTP usage.</td>
-                        </tr>
-                        <tr>
-                            <td>Databases<label st="skill"></label></td>
-                            <td>Intermediate</td>
-                            <td>So far I've worked with Mongo DB and PostgreSQL.</td>
-                        </tr>
-                        <tr>
                             <td>Javascript<label st="lang"></label></td>
                             <td>Intermediate</td>
                             <td>
@@ -135,6 +139,17 @@
                             <td>PHP<label st="lang"></label></td>
                             <td>Beginner</td>
                             <td>Just getting started.</td>
+                        </tr>
+                        <tr>
+                            <td>Server Management<label st="skill"></label></td>
+                            <td>Intermediate</td>
+                            <td>I have experience with handling Linux servers & Process management. I'm familiar with
+                                SSH & FTP usage.</td>
+                        </tr>
+                        <tr>
+                            <td>Databases<label st="skill"></label></td>
+                            <td>Intermediate</td>
+                            <td>So far I've worked with Mongo DB and PostgreSQL.</td>
                         </tr>
                         <tr>
                             <td>Wordpress<label st="fram"></label></td>
@@ -154,7 +169,8 @@
                     <table center-col="1" class="lgt-table">
                         <tr>
                             <th width="25%">Project</th>
-                            <th width="75%">Details</tr>
+                            <th width="75%">Details
+                        </tr>
                         </tr>
                         <tr>
                             <td>
@@ -162,7 +178,8 @@
                             </td>
                             <td>
                                 Developer of "Ranked Bot".
-                                The bot is capable of retrieving aggregated player statistics, match statistics & game replays served by a backend API.
+                                The bot is capable of retrieving aggregated player statistics, match statistics & game
+                                replays served by a backend API.
                                 More info <a href="https://ranked.ddns.net" target="_blank"></a>
                             </td>
                         </tr>
@@ -184,20 +201,23 @@
                         Feel free to <a href="#contact-info">contact me</a> for any inqueries.
                     </p>
 
-                    <table center-col="1" class="lgt-table"s>
+                    <table center-col="1" class="lgt-table" s>
                         <tr>
                             <th width="20%">Service</th>
                             <th width="80%">Details</th>
                         </tr>
                         <tr>
                             <td>
-                                <a title="Fiverr" target="_blank" href="https://www.fiverr.com/share/w239aB">A Discord bot</a>
+                                <a title="Fiverr" target="_blank" href="https://www.fiverr.com/share/w239aB">A Discord
+                                    bot</a>
                                 <label>10$ - 20$</label>
                             </td>
                             <td>
                                 <ul>
-                                    <li>A discord bot to do anything that can be done on discord, just the way you want it.</li>
-                                    <li>I can get anything done for you from the list below and if it's not there let me know.
+                                    <li>A discord bot to do anything that can be done on discord, just the way you want
+                                        it.</li>
+                                    <li>I can get anything done for you from the list below and if it's not there let me
+                                        know.
                                         <ul>
                                             <li>Giveaways</li>
                                             <li>Moderation</li>
@@ -207,27 +227,32 @@
                                             <li>Registration forms</li>
                                             <li>Auto roles</li>
                                         </ul>
-                                        <li>
-                                            Discord is really flexible and their API provides the same functionality of a stadard user.
-                                            Almost anything a stadard user can do can be automated with a bot.
-                                        </li>
+                                    <li>
+                                        Discord is really flexible and their API provides the same functionality of a
+                                        stadard user.
+                                        Almost anything a stadard user can do can be automated with a bot.
+                                    </li>
                                     </li>
                                 </ul>
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <a title="Fiverr" target="_blank" href="https://www.fiverr.com/share/NEoQvp">A Static Website</a>
+                                <a title="Fiverr" target="_blank" href="https://www.fiverr.com/share/NEoQvp">A Static
+                                    Website</a>
                                 <label>5$</label>
                             </td>
                             <td>
                                 <ul>
-                                    <li>A <a href="https://en.wikipedia.org/wiki/Responsive_web_design" target="_blank">responsive</a> static website.</li>
+                                    <li>A <a href="https://en.wikipedia.org/wiki/Responsive_web_design"
+                                            target="_blank">responsive</a> static website.</li>
                                     <li>Recommended for portfolio & information like websites with one page.</li>
-                                    <li>I ensure you that the final product will look and function just the way you want it to.</li>
-                                    <li>I will revise and rework it till you are 100% satisfied in accordance with the design.</li>
+                                    <li>I ensure you that the final product will look and function just the way you want
+                                        it to.</li>
+                                    <li>I will revise and rework it till you are 100% satisfied in accordance with the
+                                        design.</li>
                                 </ul>
-                            </th>
+                                </th>
                         </tr>
                     </table>
                 </div>
@@ -240,10 +265,12 @@
                         <tr>
                             <th width="20%">Qualification</th>
                             <th width="80%">Details</th>
-                        </tr>                        <tr>
+                        </tr>
+                        <tr>
                             <td>GCE OL 2020</td>
                             <td>
-                                Acquired 4A passes, 3B passes and 1C pass in English medium; Qualifying to write GCE ALs in 2023.
+                                Acquired 4A passes, 3B passes and 1C pass in English medium; Qualifying to write GCE ALs
+                                in 2023.
                             </td>
                         </tr>
                         <tr class="no-hover-effect">
@@ -303,7 +330,8 @@
     </div>
 
     <footer>
-		<p>This website was built by Yas_!_ru with HTML, JavaScript & CSS. Hosted on Github pages.</p>
-	</footer>
+        <p>This website was built by Yas_!_ru with HTML, JavaScript & CSS. Hosted on Github pages.</p>
+    </footer>
 </body>
+
 </html>
