--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Yas_!_ru's Website</title>
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap-grid.min.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/styles/style.css" />
 
     <!-- Favicons -->
@@ -38,22 +38,22 @@
         </div>
     </header>
 
-    <nav class="container">
-        <div class="left">
-            <a class="trp-button" href="#about-me">About me</a>
-            <a class="trp-button" href="#skill-set">Skill set</a>
-            <a class="trp-button" href="#projects">Projects</a>
-            <a class="trp-button" href="#fiverr">Fiverr</a>
-            <a class="trp-button" href="#qualifications">Qualifications</a>
-        </div>
+    <main class="container">
+        <nav>
+            <div class="left">
+                <a class="trp-button" href="#about-me">About me</a>
+                <a class="trp-button" href="#skill-set">Skill set</a>
+                <a class="trp-button" href="#projects">Projects</a>
+                <a class="trp-button" href="#fiverr">Fiverr</a>
+                <a class="trp-button" href="#qualifications">Qualifications</a>
+            </div>
 
-        <div class="right">
-            <a class="trp-button" href="#contact-info">Get in touch</a>
-        </div>
-    </nav>
+            <div class="right">
+                <a class="trp-button" href="#contact-info">Get in touch</a>
+            </div>
+        </nav>
 
-    <div class="container">
-        <div class="row">
+        <row class="row">
             <div class="left-column col-md-12 col-xl-4">
                 <div id="about-me" class="lgt-card">
                     <h2>About me</h2>
@@ -78,16 +78,14 @@
 
                 <div id="contact-info" class="lgt-card">
                     <h2>Get in touch</h2>
-
                     <div class="lgt-socials-bar">
                         <a title="Email" href="mailto:mwmykd@gmail.com"><i
                                 class="fas fa-at"></i><label>mwmykd@gmail.com</label></a>
                         <a title="Telephone" href="tel:+94 71 994 5826"><i class="fas fa-mobile-alt"></i><label>+94 71
                                 994 5826</label></a>
-                        <a title="Github" target="_blank" href="https://github.com/ItsYasiru"
-                            style="background: linear-gradient(to right, #161c1c, #101414)"><i class="fab fa-github-alt"></i><label>ItsYasiru</label></a>
+                        <a title="Github" target="_blank" href="https://github.com/ItsYasiru"><i class="fab fa-github-alt"></i><label>ItsYasiru</label></a>
                         <a title="Discord" href="discord:https://discord.com/users/837258955415748639"
-                            style="background: linear-gradient(to right, #7d88ff, #5865F2)"><i class="fab fa-discord"></i><label>Yas_!_ru#9999</label></a>
+                            style="background: linear-gradient(to right, #9aa2fd, #5865F2)"><i class="fab fa-discord"></i><label>Yas_!_ru#9999</label></a>
                         <a title="Instagram" target="_blank" href="https://www.instagram.com/its.yasiru/"
                             style="background: linear-gradient(to right, #fa8c51, #d6249f)"><i
                                 class="fab fa-instagram"></i><label>its.yasiru</label></a>
@@ -326,12 +324,14 @@
                     </table>
                 </div>
             </div>
-        </div>
-    </div>
+        </row>
+    </main>
 
     <footer>
         <p>This website was built by Yas_!_ru with HTML, JavaScript & CSS. Hosted on Github pages.</p>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 
 </html>
