--- a/index.html
+++ b/index.html
@@ -33,8 +33,12 @@
 <body>
     <header style="background-image: url('./assets/images/header-background.png');">
         <div class="content">
-            <h1>Yas_!_ru's Website</h1>
-            <p><i class="fas fa-terminal"></i> console.log( "No I'm not gonna fix your printer." );</p>
+            <h1>
+                Yas_!_ru's Website
+                <p>
+                    Hello I'm Yas, I like to code as a hobby and this is my website.
+                </p>
+            </h1>
         </div>
     </header>
 
@@ -250,14 +254,14 @@
                                     <li>I will revise and rework it till you are 100% satisfied in accordance with the
                                         design.</li>
                                 </ul>
-                                </th>
+                            </td>
                         </tr>
                     </table>
                 </div>
 
                 <div id="qualifications" class="lgt-card">
                     <h2>Qualifications</h2>
-                    <p>Not really much to show here but I'm getting there, qualifications I've gathered so far.</p>
+                    <p>Not really much to show here, but I'm getting there. Qualifications that I've gathered so far.</p>
 
                     <table center-col="1" class="lgt-table">
                         <tr>
@@ -273,45 +277,41 @@
                         </tr>
                         <tr class="no-hover-effect">
                             <td colspan="2">
-                                <table center-col="2" class="lgt-table">
+                                <table center-col="4" class="lgt-table">
                                     <tr>
                                         <th>Subject</th>
                                         <th>Grade</th>
+                                        <th>Subject</th>
+                                        <th>Grade</th>
                                     </tr>
-                                    <tr>
-                                        <td>Info. & Comm. Technology</td>
+                                        <td>ICT</td>
                                         <td>A</td>
+                                        <td>Geography</td>
+                                        <td>B</td>
+                                    <tr>
                                     </tr>
                                     <tr>
                                         <td>Science</td>
                                         <td>A</td>
-                                    </tr>
-                                    <tr>
-                                        <td>History</td>
-                                        <td>A</td>
-                                    </tr>
-                                    <tr>
-                                        <td>English</td>
-                                        <td>A</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Geography</td>
-                                        <td>B</td>
-                                    </tr>
-                                    <tr>
                                         <td>Mathematics</td>
                                         <td>B</td>
                                     </tr>
                                     <tr>
+                                        <td>History</td>
+                                        <td>A</td>
                                         <td>Sinhala</td>
                                         <td>B</td>
                                     </tr>
                                     <tr>
+                                        <td>English</td>
+                                        <td>A</td>
                                         <td>Buddhism</td>
                                         <td>C</td>
                                     </tr>
                                     <tr>
                                         <td>Drama & Theatre</td>
+                                        <td></td>
+                                        <td></td>
                                         <td></td>
                                     </tr>
                                 </table>
