--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <meta property="og:title" content="Yas_!_ru's Website" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://itsyasiru.github.io/ItsYasiru/" />
+    <meta property="og:image" content="https://itsyasiru.github.io/ItsYasiru/assets/images/thumbnail.png" />
+    <meta name="description" content="Hello I'm Yas, I like to code as a hobby and this is my website.">
+
+
     <title>Yas_!_ru's Website</title>
 
     <!-- Stylesheets -->
