--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta property="og:title" content="Yas_!_ru's Website" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://itsyasiru.github.io/ItsYasiru/" />
-    <meta property="og:image" content="https://itsyasiru.github.io/ItsYasiru/assets/images/thumbnail.png" />
+    <meta property="og:site_name" content="Yas_!_ru's Website">
+    <meta property="og:title" content="Yas_!_ru's Website" />
     <meta name="description" content="Hello I'm Yas, I like to code as a hobby and this is my website.">
+    <meta property="og:image" content="https://itsyasiru.github.io/ItsYasiru/assets/images/thumbnail.png" />
+    <meta property="og:url" content="https://itsyasiru.github.io/ItsYasiru/" />
 
+    <meta name="twitter:card" content="summary_large_image">
 
     <title>Yas_!_ru's Website</title>
 
