Updated some links and personal info

--- a/index.html
+++ b/index.html
@@ -74,34 +74,30 @@
                         <img src="./assets/images/profile-picture.jpg">
                     </div>
                     <p text-align="left">
-                        I'm 16 years old studying in high school for my GCE AL's at <a title="Respice Finem"
+                        I'm 17 years old studying in high school for my GCE AL's at <a title="Respice Finem"
                             href="https://www.trinitycollege.lk" target="_blank">Trinity College Kandy</a>.
                         I got into programming with the pandemic lockdown, after meeting another developer who suggested
-                        me to learn some coding.
+                        me to learn coding.
                         Since then I've been coding a lot, mostly in Python and JavaScript.
                         <br><br>
-                        I've learned a lot just by self-studying, reading articles, docs, & talking to everyone that
-                        I've met.
+                        I've learned a lot just by self-studying, reading articles, docs, & talking to everyone that I've met.
                         Special thanks to
-                        <a _target="_blank" href="https://www.linkedin.com/in/leonid-skorospelov">Leonid</a>,
-                        <a _target="_blank" href="https://www.linkedin.com/in/kelum-dhananjaya-460a4298/">Kellum</a> for
-                        their time and advice.
+                        <a target="_" href="https://www.linkedin.com/in/leonid-skorospelov">Leonid</a>,
+                        <a target="_" href="https://www.linkedin.com/in/kelum-dhananjaya-460a4298/">Kellum</a>
+                        for their time, advice and help along the way.
                     </p>
                 </div>
 
                 <div id="contact-info" class="lgt-card">
                     <h2>Get in touch</h2>
                     <div class="lgt-socials-bar">
-                        <a title="Email" href="mailto:mwmykd@gmail.com"><i
-                                class="fas fa-at"></i><label>mwmykd@gmail.com</label></a>
-                        <a title="Telephone" href="tel:+94 71 994 5826"><i class="fas fa-mobile-alt"></i><label>+94 71
-                                994 5826</label></a>
-                        <a title="Github" target="_blank" href="https://github.com/ItsYasiru"><i class="fab fa-github-alt"></i><label>ItsYasiru</label></a>
-                        <a title="Discord" href="discord:https://discord.com/users/837258955415748639"
-                            style="background: linear-gradient(to right, #9aa2fd, #5865F2)"><i class="fab fa-discord"></i><label>Yas_!_ru#9999</label></a>
-                        <a title="Instagram" target="_blank" href="https://www.instagram.com/its.yasiru/"
-                            style="background: linear-gradient(to right, #fa8c51, #d6249f)"><i
-                                class="fab fa-instagram"></i><label>its.yasiru</label></a>
+                        <a title="Email"     href="mailto:mwmykd@gmail.com"><i class="fas fa-at"></i><label>mwmykd@gmail.com</label></a>
+                        <a title="Telephone" href="tel:+94 71 994 5826"><i class="fas fa-mobile-alt"></i><label>+94 71 994 5826</label></a>
+
+                        <a target="_" title="Github"    href="https://github.com/ItsYasiru"><i class="fab fa-github-alt"></i><label>ItsYasiru</label></a>
+                        <a target="_" title="Discord"   href="discord:https://discord.com/users/837258955415748639" style="background: linear-gradient(to right, #9aa2fd, #5865F2)"><i class="fab fa-discord"></i><label>Yas_!_ru#9999</label></a>
+                        <a target="_" title="Instagram" href="https://www.instagram.com/yeah.its.yas/" style="background: linear-gradient(to right, #fa8c51, #d6249f)"><i class="fab fa-instagram"></i><label>its.yasiru</label></a>
+                        <a target="_" title="Twitter"   href="https://twitter.com/CallMeYasiru" style="background: linear-gradient(to right, #75c3f3, #109bf2)"><i class="fab fa-twitter"></i><label>Twitter</label></a>
                     </div>
                 </div>
             </div>
@@ -180,24 +176,19 @@
                     <table center-col="1" class="lgt-table">
                         <tr>
                             <th width="25%">Project</th>
-                            <th width="75%">Details
-                        </tr>
+                            <th width="75%">Details</th>
                         </tr>
                         <tr>
-                            <td>
-                                <a href="https://discord.com/invite/Hjr92J7" target="_blank">Mindustry Ranked</a>
-                            </td>
+                            <td>Ranked Bot</td>
                             <td>
                                 Developer of "Ranked Bot".
-                                The bot is capable of retrieving aggregated player statistics, match statistics & game
+                                The bot is capable of retrieving aggregated player statistics, match statistics, managing rank roles & game
                                 replays served by a backend API.
-                                More info <a href="https://ranked.ddns.net" target="_blank"></a>
+                                Join the <a href="https://discord.com/invite/Hjr92J7" target="_blank">discord server</a> for more info.
                             </td>
                         </tr>
                         <tr hidden>
-                            <td>
-                                Line A Photography
-                            </td>
+                            <td>Line A Photography</td>
                             <td>
                                 <a href="https://line-a-photography.netlify.app" target="_blank"></a>
                             </td>
@@ -328,7 +319,7 @@
                         </tr>
                         <tr>
                             <td>GCE AL 2023</td>
-                            <td></td>
+                            <td empty></td>
                         </tr>
                     </table>
                 </div>
