--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Yas_!_ru's Website">
     <meta property="og:title" content="Yas_!_ru's Website" />
-    <meta name="description" content="Hello I'm Yas, I like to code as a hobby and this is my website.">
+    <meta property="og:description" content="Hello I'm Yas, I like to code as a hobby and this is my website.">
     <meta property="og:image" content="https://itsyasiru.github.io/ItsYasiru/assets/images/thumbnail.png" />
     <meta property="og:url" content="https://itsyasiru.github.io/ItsYasiru/" />
 
