--- a/index.html
+++ b/index.html
@@ -25,16 +25,15 @@
 
     <!-- Scripts -->
     <script src="https://kit.fontawesome.com/c89aa4f49d.js" crossorigin="anonymous"></script>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YDCFQGQZB8"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VTWG7CJG31"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-
-        function gtag() {
+        function gtag(){
             dataLayer.push(arguments);
         }
         gtag('js', new Date());
-
-        gtag('config', 'G-YDCFQGQZB8');
+        gtag('config', 'G-VTWG7CJG31');
     </script>
 </head>
 
