--- a/index.html
+++ b/index.html
@@ -71,11 +71,9 @@
                     <div class="profile-pic">
                         <img src="./assets/images/profile-picture.jpg">
                     </div>
-                    <p text-align="left">
-                        I'm 17 years old studying in high school for my GCE AL's at <a title="Respice Finem"
-                            href="https://www.trinitycollege.lk" target="_blank">Trinity College Kandy</a>.
-                        I got into programming with the pandemic lockdown, after meeting another developer who suggested
-                        me to learn coding.
+                    <p text-align="center">
+                        I'm 17 years old, studying for my GCE AL's at <a title="Respice Finem" href="https://www.trinitycollege.lk" target="_blank">Trinity College Kandy</a>.
+                        I got into programming with the pandemic, after meeting another developer who got my interests sparked.
                         Since then I've been coding a lot, mostly in Python and JavaScript.
                         <br><br>
                         I've learned a lot just by self-studying, reading articles, docs, & talking to everyone that I've met.
@@ -89,13 +87,12 @@
                 <div id="contact-info" class="lgt-card">
                     <h2>Get in touch</h2>
                     <div class="lgt-socials-bar">
-                        <a title="Email"     href="mailto:mwmykd@gmail.com"><i class="fas fa-at"></i><label>mwmykd@gmail.com</label></a>
-                        <a title="Telephone" href="tel:+94 71 994 5826"><i class="fas fa-mobile-alt"></i><label>+94 71 994 5826</label></a>
+                        <a title="Email"     href="mailto:yasiru.dharmathilaka@gmail.com"><i class="fas fa-at"></i><label>Email</label></a>
 
-                        <a target="_" title="Github"    href="https://github.com/ItsYasiru"><i class="fab fa-github-alt"></i><label>ItsYasiru</label></a>
-                        <a target="_" title="Discord"   href="discord:https://discord.com/users/837258955415748639" style="background: linear-gradient(to right, #9aa2fd, #5865F2)"><i class="fab fa-discord"></i><label>Yas_!_ru#9999</label></a>
-                        <a target="_" title="Instagram" href="https://www.instagram.com/yeah.its.yas/" style="background: linear-gradient(to right, #fa8c51, #d6249f)"><i class="fab fa-instagram"></i><label>its.yasiru</label></a>
-                        <a target="_" title="Twitter"   href="https://twitter.com/CallMeYasiru" style="background: linear-gradient(to right, #75c3f3, #109bf2)"><i class="fab fa-twitter"></i><label>Twitter</label></a>
+                        <a target="_" title="Github"            href="https://github.com/ItsYasiru"><i class="fab fa-github-alt"></i><label>ItsYasiru</label></a>
+                        <a target="_" title="Open in Discord"   href="discord:https://discord.com/users/837258955415748639" style="background: linear-gradient(to right, #9aa2fd, #5865F2)"><i class="fab fa-discord"></i><label>It's Me Yas#1895</label></a>
+                        <a target="_" title="Instagram"         href="https://www.instagram.com/ayo.its.yas/" style="background: linear-gradient(to right, #fa8c51, #d6249f)"><i class="fab fa-instagram"></i><label>ayo.its.yas</label></a>
+                        <a target="_" title="Twitter"           href="https://twitter.com/CallMeYasiru" style="background: linear-gradient(to right, #75c3f3, #109bf2)"><i class="fab fa-twitter"></i><label>Twitter</label></a>
                     </div>
                 </div>
             </div>
@@ -118,7 +115,7 @@
                             <td>Python<label st="lang"></label></td>
                             <td>Expert</td>
                             <td>
-                                This is the laguage I've used the most.
+                                This is the language I've used the most.
                                 I have been coding discord bots,
                                 several computer applications & things to fiddle around with.
                                 I've mostly worked with discord.py, pymongo, PyQt, pillow, matplotlib.
@@ -185,10 +182,11 @@
                                 Join the <a href="https://discord.com/invite/Hjr92J7" target="_blank">discord server</a> for more info.
                             </td>
                         </tr>
-                        <tr hidden>
-                            <td>Line A Photography</td>
+                        <tr>
+                            <td><a href="https://github.com/ItsYasiru/Better-Threads">Better Threads</a></td>
                             <td>
-                                <a href="https://line-a-photography.netlify.app" target="_blank"></a>
+                                A wrapper over threads that provides extended control. The module supports pausing, terminating and putting threads to sleep.
+                                The module also provides some additional tools like Piping data between threads and a thread pool to keep track of threads.
                             </td>
                         </tr>
                     </table>
@@ -214,10 +212,11 @@
                             </td>
                             <td>
                                 <ul>
-                                    <li>A discord bot to do anything that can be done on discord, just the way you want
-                                        it.</li>
-                                    <li>I can get anything done for you from the list below and if it's not there let me
-                                        know.
+                                    <li>
+                                        A discord bot to do anything that can be done on discord, just the way you want it to.
+                                    </li>
+                                    <li>
+                                        I can get anything done for you from the list below and if it's not there let me know.
                                         <ul>
                                             <li>Giveaways</li>
                                             <li>Moderation</li>
@@ -227,30 +226,21 @@
                                             <li>Registration forms</li>
                                             <li>Auto roles</li>
                                         </ul>
-                                    <li>
-                                        Discord is really flexible and their API provides the same functionality of a
-                                        stadard user.
-                                        Almost anything a stadard user can do can be automated with a bot.
-                                    </li>
                                     </li>
                                 </ul>
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <a title="Fiverr" target="_blank" href="https://www.fiverr.com/share/NEoQvp">A Static
-                                    Website</a>
+                                <a title="Fiverr" target="_blank" href="https://www.fiverr.com/share/NEoQvp">A Static Website</a>
                                 <label>5$</label>
                             </td>
                             <td>
                                 <ul>
-                                    <li>A <a href="https://en.wikipedia.org/wiki/Responsive_web_design"
-                                            target="_blank">responsive</a> static website.</li>
-                                    <li>Recommended for portfolio & information like websites with one page.</li>
-                                    <li>I ensure you that the final product will look and function just the way you want
-                                        it to.</li>
-                                    <li>I will revise and rework it till you are 100% satisfied in accordance with the
-                                        design.</li>
+                                    <li>A good looking, <a href="https://en.wikipedia.org/wiki/Responsive_web_design" target="_blank">responsive</a> static website.</li>
+                                    <li>Recommended for portfolio & information like websites with one or two pages with static data to showcase.</li>
+                                    <li>I ensure you that the final product will look and function just the way you want it to.</li>
+                                    <li>I will revise and rework it till you are 100% satisfied in accordance with the design.</li>
                                 </ul>
                             </td>
                         </tr>
@@ -326,7 +316,7 @@
     </main>
 
     <footer>
-        <p>This website was built by Yas_!_ru with HTML, JavaScript & CSS. Hosted on Github pages.</p>
+        <p>This website was built & designed by Yas_!_ru. Source available on <a href="https://github.com/ItsYasiru/ItsYasiru">github</a>, hosted on github pages.</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
