--- a/index.html
+++ b/index.html
@@ -2,29 +2,29 @@
 <html lang="en">
 
 <head>
+    <title>Yas_!_ru's Website</title>
+    <link rel="icon" href="./assets/images/favicon.png" type="image/x-icon" />
+
+    <!-- Metadata -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Yas_!_ru's Website">
-    <meta property="og:title" content="Yas_!_ru's Website" />
-    <meta property="og:description" content="Hello I'm Yas, I like to code as a hobby and this is my website.">
-    <meta property="og:image" content="https://itsyasiru.github.io/ItsYasiru/assets/images/thumbnail.png" />
-
-    <meta name="twitter:card" content="summary_large_image">
-
-    <title>Yas_!_ru's Website</title>
+    <meta property="og:site_name" content="Yas_!_ru's Website" />
 
     <!-- Stylesheets -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link
+        rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+        crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./assets/styles/style.css" />
-
-    <!-- Favicons -->
-    <link rel="icon" href="./assets/images/favicon.png" type="image/x-icon" />
 
     <!-- Scripts -->
     <script src="https://kit.fontawesome.com/c89aa4f49d.js" crossorigin="anonymous"></script>
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-VTWG7CJG31"></script>
     <script>
@@ -38,13 +38,11 @@
 </head>
 
 <body>
-    <header style="background-image: url('./assets/images/header-background.png');">
-        <div class="content">
+    <header>
+        <div class="tile">
             <h1>
                 Yas_!_ru's Website
-                <p>
-                    Hello I'm Yas, I like to code as a hobby and this is my website.
-                </p>
+                <p>Hello I'm Yas, I like to code as a hobby and this is my website.</p>
             </h1>
         </div>
     </header>
@@ -71,16 +69,10 @@
                     <div class="profile-pic">
                         <img src="./assets/images/profile-picture.jpg">
                     </div>
-                    <p text-align="center">
-                        I'm 17 years old, studying for my GCE AL's at <a title="Respice Finem" href="https://www.trinitycollege.lk" target="_blank">Trinity College Kandy</a>.
-                        I got into programming with the pandemic, after meeting another developer who got my interests sparked.
+                    <p text-align="left">
+                        I'm a 17 year old freelance developer, studying for my GCE AL's at <a title="Respice Finem" href="https://www.trinitycollege.lk" target="_blank">Trinity College Kandy</a>.
+                        <br><br>I started programming with the pandemic, after meeting another developer who got my interests sparked.
                         Since then I've been coding a lot, mostly in Python and JavaScript.
-                        <br><br>
-                        I've learned a lot just by self-studying, reading articles, docs, & talking to everyone that I've met.
-                        Special thanks to
-                        <a target="_" href="https://www.linkedin.com/in/leonid-skorospelov">Leonid</a>,
-                        <a target="_" href="https://www.linkedin.com/in/kelum-dhananjaya-460a4298/">Kellum</a>
-                        for their time, advice and help along the way.
                     </p>
                 </div>
 
@@ -90,7 +82,7 @@
                         <a title="Email"     href="mailto:yasiru.dharmathilaka@gmail.com"><i class="fas fa-at"></i><label>Email</label></a>
 
                         <a target="_" title="Github"            href="https://github.com/ItsYasiru"><i class="fab fa-github-alt"></i><label>ItsYasiru</label></a>
-                        <a target="_" title="Open in Discord"   href="discord:https://discord.com/users/837258955415748639" style="background: linear-gradient(to right, #9aa2fd, #5865F2)"><i class="fab fa-discord"></i><label>It's Me Yas#1895</label></a>
+                        <a target="_" title="Open in Discord"   href="discord:https://discord.com/users/837258955415748639" style="background: linear-gradient(to right, #9aa2fd, #5865F2)"><i class="fab fa-discord"></i><label>Yas_!_ru#9999</label></a>
                         <a target="_" title="Instagram"         href="https://www.instagram.com/ayo.its.yas/" style="background: linear-gradient(to right, #fa8c51, #d6249f)"><i class="fab fa-instagram"></i><label>ayo.its.yas</label></a>
                         <a target="_" title="Twitter"           href="https://twitter.com/CallMeYasiru" style="background: linear-gradient(to right, #75c3f3, #109bf2)"><i class="fab fa-twitter"></i><label>Twitter</label></a>
                     </div>
@@ -100,6 +92,7 @@
             <div class="right-column col-md-12 col-xl-8">
                 <div id="skill-set" class="lgt-card">
                     <h2>Skill Set</h2>
+                    <hr />
                     <p>
                         This is my skill set, what I'm good and bad at.
                         Please note that this is work in progress, I still have a lot to learn and cover.
@@ -112,62 +105,42 @@
                             <th width="65%">Extra</th>
                         </tr>
                         <tr>
-                            <td>Python<label st="lang"></label></td>
+                            <td>Python</td>
                             <td>Expert</td>
                             <td>
                                 This is the language I've used the most.
                                 I have been coding discord bots,
                                 several computer applications & things to fiddle around with.
-                                I've mostly worked with discord.py, pymongo, PyQt, pillow, matplotlib.
+                                I've mostly worked with discord.py, PyQt, pillow, & matplotlib.
                             </td>
                         </tr>
                         <tr>
-                            <td>CSS & HTML<label st="lang"></label></td>
+                            <td>CSS & HTML</td>
                             <td>Expert</td>
                             <td>
-                                I can build & design good looking static websites.
-                                I'm familiar with Bootstrap & SASS usage.
+                                I can structure HTML components that's eye appealing to any audience to fit any type of data.
                             </td>
                         </tr>
                         <tr>
-                            <td>Javascript<label st="lang"></label></td>
+                            <td>JavaScript</td>
                             <td>Intermediate</td>
                             <td>
-                                Currently learning on Node.js and Angular.
-                                Familiar with JQuery and few other web development plugins usage.
+                                I've worked with frameworks like React and Next in the field of web development.
+                                I'm also familiar with frameworks like JQuery and other JavaScript plugins.
                             </td>
                         </tr>
                         <tr>
-                            <td>PHP<label st="lang"></label></td>
-                            <td>Beginner</td>
-                            <td>Just getting started.</td>
-                        </tr>
-                        <tr>
-                            <td>Server Management<label st="skill"></label></td>
-                            <td>Intermediate</td>
-                            <td>I have experience with handling Linux servers & Process management. I'm familiar with
-                                SSH & FTP usage.</td>
-                        </tr>
-                        <tr>
-                            <td>Databases<label st="skill"></label></td>
+                            <td>Databases</td>
                             <td>Intermediate</td>
                             <td>So far I've worked with Mongo DB and PostgreSQL.</td>
-                        </tr>
-                        <tr>
-                            <td>Wordpress<label st="fram"></label></td>
-                            <td>Beginner</td>
-                            <td>Currently learning about theme development.</td>
                         </tr>
                     </table>
                 </div>
 
                 <div id="projects" class="lgt-card">
                     <h2>Projects</h2>
-                    <p>
-                        Projects that I contribute to/handle.
-                        Looking forward to contribute to Python, JavaScript projects.
-                    </p>
-
+                    <hr />
+                    <p>Projects I have handled/contributed to.</p>
                     <table center-col="1" class="lgt-table">
                         <tr>
                             <th width="25%">Project</th>
@@ -178,24 +151,30 @@
                             <td>
                                 Developer of "Ranked Bot".
                                 The bot is capable of retrieving aggregated player statistics, match statistics, managing rank roles & game
-                                replays served by a backend API.
-                                Join the <a href="https://discord.com/invite/Hjr92J7" target="_blank">discord server</a> for more info.
+                                replays served by a backend API. Bot is available for the public in the <a href="discord:https://discord.com/invite/Hjr92J7" target="_blank">ranked discord server</a>.
                             </td>
                         </tr>
                         <tr>
-                            <td><a href="https://github.com/ItsYasiru/Better-Threads">Better Threads</a></td>
+                            <td><a href="https://github.com/ItsYasiru/Better-Threads" target="_blank">Better Threads</a></td>
                             <td>
                                 A wrapper over threads that provides extended control. The module supports pausing, terminating and putting threads to sleep.
                                 The module also provides some additional tools like Piping data between threads and a thread pool to keep track of threads.
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><a href="https://www.xpanse.live">Xpanse 22</a></td>
+                            <td>
+                                Website showcasing the project "Xpanse" organized by Trinity College Media Unit.
                             </td>
                         </tr>
                     </table>
                 </div>
 
                 <div id="fiverr" class="lgt-card">
-                    <h2>Fiverr</h2>
+                    <h2>Services</h2>
+                    <hr />
                     <p>
-                        An online market where I provide a few services as a freelancer.
+                        I provide a few services as a freelance developer.
                         Feel free to <a href="#contact-info">contact me</a> for any inqueries.
                     </p>
 
@@ -205,11 +184,7 @@
                             <th width="80%">Details</th>
                         </tr>
                         <tr>
-                            <td>
-                                <a title="Fiverr" target="_blank" href="https://www.fiverr.com/share/w239aB">A Discord
-                                    bot</a>
-                                <label>10$ - 20$</label>
-                            </td>
+                            <td>Developing Discord bots</td>
                             <td>
                                 <ul>
                                     <li>
@@ -231,16 +206,26 @@
                             </td>
                         </tr>
                         <tr>
+                            <td>Developing Websites</td>
                             <td>
-                                <a title="Fiverr" target="_blank" href="https://www.fiverr.com/share/NEoQvp">A Static Website</a>
-                                <label>5$</label>
-                            </td>
-                            <td>
+
+                                I ensure you that the final product will look and function just the way you want it to.
+                                I will revise and rework it till you are 100% satisfied in accordance with the design.
+                                <hr />
+                                <h6>Static website</h6>
                                 <ul>
                                     <li>A good looking, <a href="https://en.wikipedia.org/wiki/Responsive_web_design" target="_blank">responsive</a> static website.</li>
-                                    <li>Recommended for portfolio & information like websites with one or two pages with static data to showcase.</li>
-                                    <li>I ensure you that the final product will look and function just the way you want it to.</li>
-                                    <li>I will revise and rework it till you are 100% satisfied in accordance with the design.</li>
+                                    <li>Recommended for portfolio & informative like websites with one or two pages with static data to showcase.</li>
+                                </ul>
+                                <hr />
+                                <h6>Dynamic website</h6>
+                                <ul>
+                                    <li>
+                                        A fully customizable,
+                                        <a href="https://en.wikipedia.org/wiki/Dynamic_web_page" target="_blank"> dynamic </a>
+                                        website.
+                                    </li>
+                                    <li>Recommended for websites showcasing data that changes over time with many pages.</li>
                                 </ul>
                             </td>
                         </tr>
@@ -249,6 +234,7 @@
 
                 <div id="qualifications" class="lgt-card">
                     <h2>Qualifications</h2>
+                    <hr />
                     <p>Not really much to show here, but I'm getting there. Qualifications that I've gathered so far.</p>
 
                     <table center-col="1" class="lgt-table">
