forgot to add this

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <td><a href="https://www.xpanse.live">Xpanse 22</a></td>
+                            <td><a href="https://www.xpanse.live" target="_blank">Xpanse 22</a></td>
                             <td>
                                 Website showcasing the project "Xpanse" organized by Trinity College Media Unit.
                             </td>
